# Maggiore-IA-WebUI

./: .env.example  .gitignore  PROJECT_SPEC.md  README.md  System Prompt.txt  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  auth.py  chat.py  rag.py
app/core/: __init__.py  config.py  database.py  logging.py  security.py
app/crud/: chat.py  user.py
app/integrations/: __init__.py  n8n.py
app/mcp/: __init__.py  tools.py
app/models/: __init__.py  chat_message.py  chat_session.py  memory.py  user.py
app/services/: __init__.py  chat_service.py  ollama_client.py  rag_service.py
scripts/: create_admin.py
static/: chat.html  index.html  login.html
static/css/: base.css  chat.css  style.css
static/js/: app.js  auth.js  chat.js
